<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@mipmap/timg"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/start_angle"
        android:layout_width="180px"
        android:layout_height="50px"
        android:textColor="@android:color/black"
        android:layout_marginLeft="150px"
        android:layout_marginStart="150px"
        android:layout_marginTop="200px"
        android:textSize="35px"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="220px"
        android:layout_height="50px"
        android:text="89"
        android:paddingLeft="85px"
        android:textSize="35px"
        android:layout_marginLeft="350px"
        android:layout_marginTop="200px"
        android:background="@drawable/editshape"
        android:id="@+id/Ed1"
        />

    <TextView
        android:text="@string/stop_angle"
        android:layout_width="180px"
        android:layout_height="50px"
        android:layout_marginLeft="150px"

        android:textColor="@android:color/black"
        android:layout_marginStart="150px"
        android:layout_marginTop="300px"
        android:textSize="35px"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="220px"
        android:layout_height="50px"
        android:text="271"
        android:paddingLeft="85px"
        android:textSize="35px"
        android:layout_marginLeft="350px"
        android:layout_marginTop="300px"
        android:background="@drawable/editshape"
        android:id="@+id/Ed2"
        />

    <TextView
        android:text="@string/scan_speed"
        android:layout_width="180px"
        android:layout_height="50px"

        android:textColor="@android:color/black"
        android:layout_marginLeft="150px"
        android:layout_marginStart="150px"
        android:layout_marginTop="400px"
        android:textSize="35px"
        android:id="@+id/textView5" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="220px"
        android:layout_height="50px"
        android:layout_marginLeft="350px"
        android:layout_marginTop="400px"
        android:paddingLeft="85px"
        android:background="@drawable/editshape"
        android:entries="@array/speed_array" />
    <TextView
        android:text="@string/circle_number"
        android:layout_width="180px"
        android:layout_height="50px"
        android:layout_marginLeft="150px"

        android:textColor="@android:color/black"
        android:layout_marginStart="150px"
        android:layout_marginTop="500px"
        android:textSize="35px"
        android:id="@+id/textView6" />
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="220px"
        android:layout_height="50px"
        android:layout_marginLeft="350px"
        android:layout_marginTop="500px"
        android:paddingLeft="85px"
        android:background="@drawable/editshape"
        android:entries="@array/circle_number" />
    <Button
    android:id="@+id/bt_start_scan"
    android:layout_width="300px"
    android:paddingBottom="5px"
    android:paddingTop="5px"
    android:layout_marginLeft="240px"
    android:layout_height="100px"
    android:text="@string/start_scan"
    android:textSize="35px"
    android:layout_marginTop="600px" />

    <Button
        android:id="@+id/bt_stop_scan"
        android:layout_width="300px"
        android:paddingBottom="5px"
        android:paddingTop="5px"
        android:layout_marginLeft="240px"
        android:layout_height="100px"
        android:text="@string/stop_scan"
        android:textSize="35px"
        android:layout_marginTop="700px" />

    <Button
        android:id="@+id/bt_check_file"
        android:layout_width="300px"
        android:paddingBottom="5px"
        android:paddingTop="5px"
        android:layout_marginLeft="240px"
        android:layout_height="100px"
        android:text="@string/check_file"
        android:textSize="35px"
        android:layout_marginTop="800px" />
</RelativeLayout>
